Eevee 4.2 no longer exports Cryptomatte metadatas #125232

Closed
opened 2024-07-22 16:03:41 +02:00 by Nicolas-120 · 5 comments

System Information
Operating system: Windows-10-10.0.22631-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3070/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 560.70

Blender Version
Broken: version: 4.2.0, branch: blender-v4.2-release, commit date: 2024-07-16 06:20, hash: a51f293548ad
Worked: 4.1

Short description of error
Blender Eevee 4.2 no longer seems to exports Cryptomatte metadatas via the File Output node. The Cryptomatte channels are still rendered but it seems comp softwares like Nuke need to have the Cryptomatte Metadata too to work.

In 4.1, Cryptomatte metadatas were correctly exported (cf Nuke screens comparison bellow).

I tried in vain to fix this with several EXR multilayer compression Codecs, including "None".

(Crypto reading still works within Blender btw)

Exact steps for others to reproduce the error
The render parameters have already been set to export Cryptomatte channels in the project bellow. But it's only by checking with Nuke that the missing metadatas are apparent as an issue.

**System Information** Operating system: Windows-10-10.0.22631-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3070/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 560.70 **Blender Version** Broken: version: 4.2.0, branch: blender-v4.2-release, commit date: 2024-07-16 06:20, hash: `a51f293548ad` Worked: 4.1 **Short description of error** Blender Eevee 4.2 no longer seems to exports Cryptomatte metadatas via the File Output node. The Cryptomatte channels are still rendered but it seems comp softwares like Nuke need to have the Cryptomatte Metadata too to work. In 4.1, Cryptomatte metadatas were correctly exported (cf Nuke screens comparison bellow). I tried in vain to fix this with several EXR multilayer compression Codecs, including "None". (Crypto reading still works within Blender btw) **Exact steps for others to reproduce the error** The render parameters have already been set to export Cryptomatte channels in the project bellow. But it's only by checking with Nuke that the missing metadatas are apparent as an issue.
Nicolas-120 added the
Type
Report
Severity
Normal
Status
Needs Triage
labels 2024-07-22 16:03:42 +02:00
Member

Referring to #122197 I'll forward this report to Jeroen and Clément for further investigation.

Referring to #122197 I'll forward this report to Jeroen and Clément for further investigation.

Will confirm and mark high since this seems like a regression. Unsure how often the "Needs Info from Devs" tag is really looked at.

Will confirm and mark high since this seems like a regression. Unsure how often the "Needs Info from Devs" tag is really looked at.
Omar Emara self-assigned this 2024-07-26 21:34:02 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-07-30 18:51:40 +02:00
Member

@OmarEmaraDev , can we add this to 4.2 backporting list?

@OmarEmaraDev , can we add this to 4.2 backporting list?
Member
@PratikPB2123 Done.

Can confirm that the problem with Nuke not recognizing the cryptomatte's is resolved as of at least blender 4.3 alpha (2024-08-23).

Can confirm that the problem with Nuke not recognizing the cryptomatte's is resolved as of at least blender 4.3 alpha (2024-08-23).
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#125232
No description provided.