source/blender/blenkernel/intern/cryptomatte.cc
@@ -331,15 +331,6 @@ void BKE_cryptomatte_matte_id_to_entries(NodeCryptomatte *node_storage, const ch
   }
 }
 
-static std::string cryptomatte_determine_name(const ViewLayer *view_layer,
-                                              const blender::StringRefNull cryptomatte_layer_name)
-{
-  std::stringstream stream;
-  const size_t view_layer_name_len = BLI_strnlen(view_layer->name, sizeof(view_layer->name));
-  stream << std::string(view_layer->name, view_layer_name_len) << "." << cryptomatte_layer_name;
-  return stream.str();
-}
-
 static uint32_t cryptomatte_determine_identifier(const blender::StringRef name)
 {
   return BLI_hash_mm3(reinterpret_cast<const uchar *>(name.data()), name.size(), 0);
@@ -356,9 +347,7 @@ static void add_render_result_meta_data(RenderResult *render_result,
       value.data());
 }
 
-void BKE_cryptomatte_store_metadata(const CryptomatteSession *session,
-                                    RenderResult *render_result,
-                                    const ViewLayer *view_layer)
+void BKE_cryptomatte_store_metadata(const CryptomatteSession *session, RenderResult *render_result)
 {
   for (const blender::MapItem<std::string, blender::bke::cryptomatte::CryptomatteLayer> item :
        session->layers.items())
@@ -367,12 +356,11 @@ void BKE_cryptomatte_store_metadata(const CryptomatteSession *session,
     const blender::bke::cryptomatte::CryptomatteLayer &layer = item.value;
 
     const std::string manifest = layer.manifest();
-    const std::string name = cryptomatte_determine_name(view_layer, layer_name);
 
-    add_render_result_meta_data(render_result, name, "name", name);
-    add_render_result_meta_data(render_result, name, "hash", "MurmurHash3_32");
-    add_render_result_meta_data(render_result, name, "conversion", "uint32_to_float32");
-    add_render_result_meta_data(render_result, name, "manifest", manifest);
+    add_render_result_meta_data(render_result, layer_name, "name", layer_name);
+    add_render_result_meta_data(render_result, layer_name, "hash", "MurmurHash3_32");
+    add_render_result_meta_data(render_result, layer_name, "conversion", "uint32_to_float32");
+    add_render_result_meta_data(render_result, layer_name, "manifest", manifest);
   }
 }
 
