source/blender/draw/engines/eevee_next/eevee_cryptomatte.cc
@@ -129,7 +129,7 @@ float Cryptomatte::register_id(const eViewLayerEEVEEPassType layer, const ID &id
 void Cryptomatte::store_metadata(RenderResult *render_result)
 {
   if (session_) {
-    BKE_cryptomatte_store_metadata(&*session_, render_result, inst_.view_layer);
+    BKE_cryptomatte_store_metadata(&*session_, render_result);
   }
 }
 
